unpackaged/main/default/objects/Quote_ERP__c/Quote_ERP__c.object-meta.xml
<CustomObject>
    <description>A quote that is sent over from ERP</description>
    <label>Quote ERP</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote_ERP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes ERP</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>