unpackaged/main/default/objects/Quote_ERP__c/fields/Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain__c</fullName>
    <description>The domain associated with an account. For generics this will still be a generic domain.</description>
    <label>Account Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>