unpackaged/main/default/objects/Quote_ERP__c/fields/Account_YTD_Spend__c.field-meta.xml
<CustomField>
    <fullName>Account_YTD_Spend__c</fullName>
    <formula>AccountID__r.YTDSpend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account YTD Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>