unpackaged/main/default/objects/Quote_ERP__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account that the quote belongs to</description>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>