unpackaged/main/default/objects/Quote_ERP__c/fields/Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Due_Date__c</fullName>
    <description>2D Bid Due Date</description>
    <label>Bid Due Date</label>
    <type>Date</type>
</CustomField>