unpackaged/main/default/objects/Quote_ERP__c/fields/Conformance_Cert__c.field-meta.xml
<CustomField>
    <fullName>Conformance_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conformance Cert</label>
    <type>Checkbox</type>
</CustomField>