unpackaged/main/default/objects/Quote_ERP__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact</description>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>