unpackaged/main/default/objects/Quote_ERP__c/fields/ConversionProbability__c.field-meta.xml
<CustomField>
    <fullName>ConversionProbability__c</fullName>
    <label>Conversion Probability</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>