unpackaged/main/default/objects/Quote_ERP__c/fields/Customer_First_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Quote__c</fullName>
    <formula>if (  isblank(ContactID__c), LeadID__r.First_Quote_Date__c = Quote_ERP_Created_Date__c,  ContactID__r.First_Quote_Date__c = Quote_ERP_Created_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer First Quote?</label>
    <type>Checkbox</type>
</CustomField>