unpackaged/main/default/objects/Quote_ERP__c/fields/DFM_Description__c.field-meta.xml
<CustomField>
    <fullName>DFM_Description__c</fullName>
    <label>DFM Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>