unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Last_Name__c</fullName>
    <label>ERP Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>