unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Phone__c</fullName>
    <label>ERP Contact Phone</label>
    <type>Phone</type>
</CustomField>