unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_PartPK__c.field-meta.xml
<CustomField>
    <fullName>ERP_PartPK__c</fullName>
    <description>A unique concatenation of Parts that will link to Opportunities and Leads</description>
    <label>ERP PartPK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>