unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>ERP_Quote_URL__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+Xometry_ERP_ID__c+"&amp;n_columns=19","Go to this Quote in the ERP", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Quote URL</label>
    <type>Text</type>
</CustomField>