unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_Country__c</fullName>
    <label>ERP Shipping Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>