unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_Shipping_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_State_or_Province__c</fullName>
    <label>ERP Shipping State or Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>