unpackaged/main/default/objects/Quote_ERP__c/fields/ERP_User_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_User_Company_Name__c</fullName>
    <description>The Company Name that the user filled out in the ERP</description>
    <inlineHelpText>The Company Name that the user filled out in the Checkout Section.</inlineHelpText>
    <label>ERP Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>