unpackaged/main/default/objects/Quote_ERP__c/fields/FDMSize__c.field-meta.xml
<CustomField>
    <fullName>FDMSize__c</fullName>
    <description>If the Quote is FDM, then this is the size category for the part</description>
    <label>FDM Part Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>