unpackaged/main/default/objects/Quote_ERP__c/fields/FirstQuoterUser__c.field-meta.xml
<CustomField>
    <fullName>FirstQuoterUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the first quoter is staff this field will be mapped to the user</description>
    <label>First Quoter User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_ERP1</relationshipName>
    <type>Lookup</type>
</CustomField>