unpackaged/main/default/objects/Quote_ERP__c/fields/Get_2D_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>Get_2D_Quote_URL__c</fullName>
    <formula>HYPERLINK("https://get.xometry.com/rfq/review/"+Xometry_ERP_ID__c ,"Go to this Quote in the Get Site", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get 2D Quote URL</label>
    <type>Text</type>
</CustomField>