unpackaged/main/default/objects/Quote_ERP__c/fields/Get_Xom_Quote_Url__c.field-meta.xml
<CustomField>
    <fullName>Get_Xom_Quote_Url__c</fullName>
    <formula>HYPERLINK("https://get.xometry.com/quote/"+  Xometry_ERP_ID__c ,"Go to this Quote in the Get Site", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Quote Url</label>
    <type>Text</type>
</CustomField>