unpackaged/main/default/objects/Quote_ERP__c/fields/getSite_Deleted__c.field-meta.xml
<CustomField>
    <fullName>getSite_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quote was deleted on the getSite.</description>
    <label>getSite Deleted</label>
    <type>Checkbox</type>
</CustomField>