unpackaged/main/default/objects/Quote_ERP__c/fields/Hardware_Cert__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardware Cert</label>
    <type>Checkbox</type>
</CustomField>