unpackaged/main/default/objects/Quote_ERP__c/fields/Has_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Has_Opportunity__c</fullName>
    <formula>if(OpportunityID__c&lt;&gt;"",TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has associated Opportunity?</label>
    <type>Checkbox</type>
</CustomField>