unpackaged/main/default/objects/Quote_ERP__c/fields/IsSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Supplier</label>
    <type>Checkbox</type>
</CustomField>