unpackaged/main/default/objects/Quote_ERP__c/fields/Last_Contact_Activity_AM__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Activity_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHrc.ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Activity AM</label>
    <type>DateTime</type>
</CustomField>