unpackaged/main/default/objects/Quote_ERP__c/fields/Last_Quote_Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Modification_Date__c</fullName>
    <label>Last Quote Modification Date</label>
    <type>Date</type>
</CustomField>