unpackaged/main/default/objects/Quote_ERP__c/fields/Lead_Next_Activity_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Lead_Next_Activity_Date_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHrn.ActivityMetric.NextActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Next Activity Date AM</label>
    <type>DateTime</type>
</CustomField>