unpackaged/main/default/objects/Quote_ERP__c/fields/ManualQuoterEmail__c.field-meta.xml
<CustomField>
    <fullName>ManualQuoterEmail__c</fullName>
    <description>Email address of the person who first moved the quote to Manually-Quoted</description>
    <label>Manual Quoter Email</label>
    <type>Email</type>
</CustomField>