unpackaged/main/default/objects/Quote_ERP__c/fields/ManualQuoterUser__c.field-meta.xml
<CustomField>
    <fullName>ManualQuoterUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User in Salesforce that made the manual quote</description>
    <label>Manual Quoter User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>