unpackaged/main/default/objects/Quote_ERP__c/fields/ManualQuoteTime__c.field-meta.xml
<CustomField>
    <fullName>ManualQuoteTime__c</fullName>
    <description>Time the quote was moved to Manually Quoted</description>
    <label>Manual Quote Time</label>
    <type>DateTime</type>
</CustomField>