unpackaged/main/default/objects/Quote_ERP__c/fields/Next_Contact_Activity_AM__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Activity_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHrc.ActivityMetric.NextActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Next Activity AM</label>
    <type>DateTime</type>
</CustomField>