unpackaged/main/default/objects/Quote_ERP__c/fields/Off_Hours__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours__c</fullName>
    <formula>Hour(TIMEVALUE(CreatedDate)) &lt; 9 ||
Hour(TIMEVALUE(CreatedDate)) &gt; 18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Hours</label>
    <type>Checkbox</type>
</CustomField>