unpackaged/main/default/objects/Quote_ERP__c/fields/Order_ERP_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Flag represent if the Quote became an Order in the ERP. Field to reduce duplicate Opportunities.</description>
    <label>Order_ERP_FLAG</label>
    <type>Checkbox</type>
</CustomField>