unpackaged/main/default/objects/Quote_ERP__c/fields/Order_Time_Flag__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Integrations to Signal the Quote has become an Order</inlineHelpText>
    <label>Order Time Flag</label>
    <type>Checkbox</type>
</CustomField>