unpackaged/main/default/objects/Quote_ERP__c/fields/OrderERPSFID__c.field-meta.xml
<CustomField>
    <fullName>OrderERPSFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Order in Salesforce.</inlineHelpText>
    <label>OrderERPSFID</label>
    <referenceTo>Order_Erp__c</referenceTo>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>