unpackaged/main/default/objects/Quote_ERP__c/fields/Owner_Match_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Match_Account__c</fullName>
    <formula>OwnerId =  AccountID__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Match (Account)</label>
    <type>Checkbox</type>
</CustomField>