unpackaged/main/default/objects/Quote_ERP__c/fields/Owner_Match_Lead__c.field-meta.xml
<CustomField>
    <fullName>Owner_Match_Lead__c</fullName>
    <formula>OwnerId =  LeadID__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Match (Lead)</label>
    <type>Checkbox</type>
</CustomField>