unpackaged/main/default/objects/Quote_ERP__c/fields/process_isAssembly__c.field-meta.xml
<CustomField>
    <fullName>process_isAssembly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isAssembly</label>
    <type>Checkbox</type>
</CustomField>