unpackaged/main/default/objects/Quote_ERP__c/fields/process_isBinderJetting__c.field-meta.xml
<CustomField>
    <fullName>process_isBinderJetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isBinderJetting</label>
    <type>Checkbox</type>
</CustomField>