unpackaged/main/default/objects/Quote_ERP__c/fields/process_isCarbon__c.field-meta.xml
<CustomField>
    <fullName>process_isCarbon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that shows if Quote is connected with process of Carbon</description>
    <label>process_isCarbon</label>
    <type>Checkbox</type>
</CustomField>