unpackaged/main/default/objects/Quote_ERP__c/fields/process_isDirect_Sourced__c.field-meta.xml
<CustomField>
    <fullName>process_isDirect_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isDirect_Sourced</label>
    <type>Checkbox</type>
</CustomField>