unpackaged/main/default/objects/Quote_ERP__c/fields/process_isExtrusion__c.field-meta.xml
<CustomField>
    <fullName>process_isExtrusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isMetalExtrusion</label>
    <type>Checkbox</type>
</CustomField>