unpackaged/main/default/objects/Quote_ERP__c/fields/process_isFDM__c.field-meta.xml
<CustomField>
    <fullName>process_isFDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isFDM</label>
    <type>Checkbox</type>
</CustomField>