unpackaged/main/default/objects/Quote_ERP__c/fields/process_isSheetCutting__c.field-meta.xml
<CustomField>
    <fullName>process_isSheetCutting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isSheetCutting</label>
    <type>Checkbox</type>
</CustomField>