unpackaged/main/default/objects/Quote_ERP__c/fields/process_isTubeBending__c.field-meta.xml
<CustomField>
    <fullName>process_isTubeBending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isTubeBending</label>
    <type>Checkbox</type>
</CustomField>