unpackaged/main/default/objects/Quote_ERP__c/fields/process_isTubeCutting__c.field-meta.xml
<CustomField>
    <fullName>process_isTubeCutting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>process_isTubeCutting</label>
    <type>Checkbox</type>
</CustomField>