unpackaged/main/default/objects/Quote_ERP__c/fields/Process_Update__c.field-meta.xml
<CustomField>
    <fullName>Process_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Updated?</label>
    <type>Checkbox</type>
</CustomField>