unpackaged/main/default/objects/Quote_ERP__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Quotes ERP</relationshipLabel>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>