unpackaged/main/default/objects/Quote_ERP__c/fields/QuickTurn__c.field-meta.xml
<CustomField>
    <fullName>QuickTurn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Quick Turn Part?</label>
    <type>Checkbox</type>
</CustomField>