unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count__c</fullName>
    <description>2D Quotes for an RFQ</description>
    <label>Quote_Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>