unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Quote_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = DELETED</description>
    <inlineHelpText>TRUE = DELETED</inlineHelpText>
    <label>[dnu] Quote Deleted?</label>
    <type>Checkbox</type>
</CustomField>