unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Discount__c</fullName>
    <label>Quote Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>