unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_ERP_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_ERP_Created_Time__c</fullName>
    <label>Quote ERP Created Time</label>
    <type>DateTime</type>
</CustomField>