unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_ERP_Last_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_ERP_Last_Updated_Time__c</fullName>
    <description>Last Updated time coming from the ERP. Comes in as Eastern Time</description>
    <label>Quote ERP Last Updated Time</label>
    <type>DateTime</type>
</CustomField>