unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner Manager</label>
    <type>Text</type>
</CustomField>