unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner Role</label>
    <type>Text</type>
</CustomField>