unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Redeemed_Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Quote_Redeemed_Points_Value__c</fullName>
    <label>Quote Redeemed Points Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>