unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Quote_Shipping__c</fullName>
    <label>Quote Shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>