unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sub_Total__c</fullName>
    <label>Quote Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>