unpackaged/main/default/objects/Quote_ERP__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Quote's last status between manual,rfq, and auto</description>
    <label>Quote Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>