unpackaged/main/default/objects/Quote_ERP__c/fields/Quoted_Total_Amt_FDM__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Total_Amt_FDM__c</fullName>
    <label>Quoted Total Amt FDM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>